--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
     <title>AI CV Analyzer | FYP</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -16,9 +17,14 @@
             <a class="navbar-brand fw-bold" href="/">
                 <i class="fas fa-robot text-primary"></i> CV<span class="text-primary">Analyzer</span>
             </a>
-            <div class="d-flex">
+            
+            <div class="d-flex gap-2">
+                <a href="/build-resume" class="btn btn-warning btn-sm fw-bold text-dark">
+                    <i class="fas fa-magic me-1"></i> Build CV
+                </a>
+
                 <a href="/admin" class="btn btn-outline-light btn-sm">
-                    <i class="fas fa-lock"></i> Admin Panel
+                    <i class="fas fa-lock"></i> Admin
                 </a>
             </div>
         </div>
