--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -148,7 +148,7 @@
         document.getElementById('loading-screen').style.display = 'flex';
     }
 
-    // Chart Logic (Sirf tab chalega jab Score hoga)
+    // Chart Logic 
     {% if score %}
     document.addEventListener("DOMContentLoaded", function() {
         var score = {{ score }};
